# mcp-practice

./: Cargo.toml  flake.nix
